# mcp_playground

./: Dockerfile  Procfile  README.md  app.py  pyproject.toml  requirements.txt  setup.sh
src/mcp_snowflake_server/: __init__.py  app.py  server.py
